# pyroxi

./: LEGAL_DISCLAIMER.md  LICENSE  README.md  demo.py  pyproject.toml  setup.py  test_pyroxy.py
.github/workflows/: workflow.yml
docs/: API_REFERENCE.md
examples/: advanced_usage.py  async_usage.py  basic_usage.py  performance_test.py
tests/: test_connection.py  test_packet.py
